Limit SPeL getValue to SimpleEvaluationContext (#15521)
* Limit SPeL getValue to SimpleEvaluationContext

* Fix pytests